Test/dafny0/PrintUTF8Fails.dfy.expect
PrintUTF8Fails.dfy(5,8): Error: invalid LogicalExpression
1 parse errors detected in PrintUTF8Fails.dfy
